Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-app
  name: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: prom-test-app
        image: quay.io/harshil77/example-prom-app:latest
        imagePullPolicy: IfNotPresent
