Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
  name: test-app
  namespace: my-namespace
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-app
